@@ -158,6 +158,13 @@
 # Defaults to true.
 #allow_anonymous true
 
+# Control access to the broker using a password file. The file is a
+# text file # of lines in the format:
+# username:password
+# The password (and colon) may be omitted if desired, although this 
+# offers very little in the way of security.
+#password_file
+
 # =================================================================
 # Bridges
 # =================================================================
