@@ -1,6 +1,8 @@
 0.10 - 2011xxxx
 ===============
 
+- Implement support for the password_file option and accompanying
+  authentication requirements in the broker.
 - mosquitto_will_set() and mosquitto_publish() now return
   MOSQ_ERR_PAYLOAD_SIZE if the payload is too large (>268,435,455 bytes).
 - Bridge support can now be disabled at compile time.
